--- a/index.html
+++ b/index.html
@@ -1,187 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- flaticon -->
-        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>SHOPLANE - A Place For Shopping</title>
+    <script src="https://kit.fontawesome.com/35c398e458.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="./styles.css" />
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+</head>
 
-        <!-- fontawesome icon -->
-
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-        <title>Home</title>
-    </head>
-
-    <body>
-
-        <!-- HEADER START -->
-
-
-        <header>
-            <nav id="header">
-                <div class="menu-bar">
-                    <a id="logo-title" href="/index.html"><span>Shop</span>Lane</a>
-                    <a href="#clothing">Clothing</a>
-                    <a href="#accessories">Accessories</a>
-                </div>
-
-                <div class="search-bar">
-                    <i class="fas fa-search icon"></i>
-                    <input class="input-field" type="text" placeholder="Search for Clothing and Accessories" />
-                </div>
-
-                <div class="card-profile">
-                    <div class="cart-wrapper">
-                        <i class="fas fa-shopping-cart"></i>
-                        <div id="item-in-cart">0</div>
-                    </div>
-                    <div class="profile-img">
-                        <img src="./img/mypic.jpg" alt="Not found" />
-                    </div>
-
-                </div>
-            </nav>
-        </header>
-        <!-- HEADER END  -->
-
-         <!-- Slideshow container -->
-         <div class="slide-wrapper">
-
-            <div class="slideshow-container">
-
-                <div class="mySlides fade">
-
-                    <img src="./img/image1.png" style="width:100%" alt="image2">
-
-                </div>
-
-                <div class="mySlides fade">
-
-                    <img src="./img/image2.png" style="width:100%" alt="image2">
-
-                </div>
-
-                <div class="mySlides fade">
-
-                    <img src="./img/image3.png" style="width:100%"  alt="image3">
-
-                </div>
-                <div class="mySlides fade">
-
-                    <img src="./img/image4.png" style="width:100%"  alt="image3">
-
-                </div>
-
+<body>
+    <header>
+        <nav id="topbar">
+            <div id="left-menu">
+                <div id="logo">
+                    <a href="./index.html"><span>shop</span>lane</a></div>
+                <a href="#clothing">clothing</a>
+                <a href="#accessories">accessories</a>
+            </div>
+            <div id="search-wrapper">
+                <i class="fas fa-search"></i>
+                <input id="search-box" type="text" name="search" placeholder="Search for Clothing and Accessories" />
 
             </div>
-            <br>
-
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-                 <span class="dot" onclick="currentSlide(4)"></span>
+            <div class="right-menu">
+                <div id="cart-wrapper">
+                    <p id="cart-count"></p>
+                    <a href="./checkout.html"><i class="fas fa-shopping-cart"></i></a>
+                </div>
             </div>
+            <i id="user_avatar" class="far fa-user-circle"></i>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+
+        </nav>
+    </header>
+
+
+
+    <section id="carousel">
+        <div class="slider">
+            <img src="./image/freshArrival.png" alt="slider_img">
+            <img src="./image/puma.png" alt="slider_img">
+            <img src="./image/for-women.png" alt="slider_img">
+            <img src="./image/offer.png" alt="slider_img">
         </div>
-        <!-- carousel end -->
-        
-        <!-- CONTAIN SECTION START-->
-        <section id="main-container">
-            <!-- /*Clothing section wrapper*/ -->
-
-            <div class="clothing-section-wrapper">
-                <!-- <h2  id="clothing">Clothing for Men and Women</h2> -->
-
-                <div class="clothing-col-card-wrapper">
+    </section>
 
 
-                </div>
-
-            </div>
+    <main>
 
 
-            <div class="accessories-section-wrapper">
+        <section id="clothing">
 
-                <!-- <h2  id="accessories" >Accessories  for Men and Women</h2> -->
+            <h2 class="section-heading">Clothing for Men and Women</h2>
 
-                <div class="accessories-col-card-wrapper">
-
-
-                </div>
-
-            </div>
-
-
+            <div class="card-container" id="clothingCards"></div>
         </section>
 
-        <!-- CONTAIN SECTION END-->
 
 
-        <!-- FOOTER START -->
-        <footer>
+        <section id="accessories">
 
-            <div class="footer-wrapper">
-                <div class="online-store">
-                    <h3 class="footer-title">online store</h3>
-                    <ul class="footer-list-item-wrapper">
-                        <li><a class="footer-list-item">Men Clothing</a></li>
-                        <li><a class="footer-list-item">WOMEN CLOTHING</a></li>
-                        <li><a class="footer-list-item">Men Accessories</a></li>
-                        <li><a class="footer-list-item">Women Accessories</a></li>
-                    </ul>
-                </div>
-                <div class="helpful-link">
-                    <h3 class="footer-title">Helpful Link</h3>
-                    <ul class="footer-list-item-wrapper">
-                        <!-- <a class="footer-list-item">Home</a>
-                        <a class="footer-list-item">About</a>
-                        <a class="footer-list-item">Contact</a> -->
-                        <li><a class="footer-list-item">Home</a></li>
-                        <li><a class="footer-list-item">About</a></li>
-                        <li><a class="footer-list-item">Contact</a></li>
+            <h2 class="section-heading">Accessories for Men and Women</h2>
 
+            <div class="card-container" id="accessoriesCards"></div>
+        </section>
 
-                    </ul>
-                </div>
-                <div class="partners">
-                    <h3 class="footer-title"> Partners</h3>
-                    <ul class="footer-list-item-wrapper">
+    </main>
+    <img id="edyoda-projects-logo" src="https://i.imgur.com/OKAY6Fl.png" alt="EdYoda Projects Logo" />
 
-                        <li><a class="footer-list-item">Zara</li>
-                        <li><a class="footer-list-item">pantaloons</a></li>
-                        <li><a class="footer-list-item">levis</a></li>
-                        <li><a class="footer-list-item">ucb</a></li>
-                        <li> <a class="footer-list-item">+ many more</a></li>
+    <footer>
+        <ul class="online-store">
+            <li>
+                <h3>Online Store</h3>
+            </li>
+            <li><a href="#">Men Clothing</a></li>
+            <li><a href="#">Women Clothing</a></li>
+            <li><a href="#">Men Accessories</a></li>
+            <li><a href="#">Women Accessories</a></li>
+        </ul>
+        <ul class="helpful-links">
+            <li>
+                <h3>Helpful Links</h3>
+            </li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="patners">
+            <li>
+                <h3>Patners</h3>
+            </li>
+            <li><a href="#">Zara</a></li>
+            <li><a href="#">Pantaloons</a></li>
+            <li><a href="#">Levis</a></li>
+            <li><a href="#">Ucb</a></li>
+            <li><a href="#">+ Many More</a></li>
+        </ul>
+        <ul class="address">
+            <li>
+                <h3>Address</h3>
+            </li>
+            <li>Building 101</li>
+            <li>Central Avenue</li>
+            <li>LA - 902722</li>
+            <li>United States</li>
+        </ul>
+    </footer>
 
-                    </ul>
-                </div>
-                <div class="address">
-                    <h3 class="footer-title">Address</h3>
-                    <ul class="footer-list-item-wrapper">
-                        <li><a class="footer-list-item">Building 101</a></li>
-                        <li><a class="footer-list-item">central Avenue</a></li>
-                        <li><a class="footer-list-item">LA - 902722</a></li>
-                        <li><a class="footer-list-item">unites states</a></li>
+    <!-- FOOTER SECTION END  -->
 
-                    </ul>
-                </div>
-
-            </div>
-
-        </footer>
-
-        <!-- FOOTER END -->
-
-
-
-        <script src="./main.js"></script>
-    </body>
+    <!-- JavaScript, jQuery & Slick Links -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous"></script>
+    <script src="./js/base.js"></script>
+    <script src="./js/index.js"></script>
+</body>
 
 </html>
