--- a/orderconfirm.html
+++ b/orderconfirm.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SHOPLANE - A Place For Shopping</title>
-
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/index.css" />
+    <!-- Font-Awesome CDN -->
     <script src="https://kit.fontawesome.com/35c398e458.js"></script>
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
+    <!-- Google Font -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
@@ -44,58 +45,46 @@
 
         </nav>
     </header>
-    <main class="section-wrapper">
-        <section id="cart">
-            <h1>Checkout</h1>
-            <div class="cart-container">
-                <div class="left-side">
-                    <p>Total Items: <span id="number-of-item"></span></p>
-                    <div class="cart-items" id="cart-item-container"></div>
-                </div>
-                <div class="right-side">
-                    <div class="total-amount">
-                        <h2>Total Amount</h2>
-                        <p>Total Amount: Rs <span id="total-amount"></span></p>
-                        <a href="./orderconfirm.html">
-                            <button id="place-order">Place Order</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <img id="edyoda-projects-logo" src="https://i.imgur.com/OKAY6Fl.png" alt="EdYoda Projects Logo" />
+    <div class="order-confirm">
+        <img src="./image/img_confirm3.png" alt="order-confirm-img" />
+        <h3>Order Placed Successfully!!</h3>
+        <p>We have sent you an email with the order details</p>
+    </div>
+
+
+
+
 
     <!-- FOOTER SECTION START -->
     <footer>
-        <ul class="online-store">
+        <ul class="online-store ">
             <li>
                 <h3>Online Store</h3>
             </li>
-            <li><a href="#">Men Clothing</a></li>
-            <li><a href="#">Women Clothing</a></li>
-            <li><a href="#">Men Accessories</a></li>
-            <li><a href="#">Women Accessories</a></li>
+            <li><a href="# ">Men Clothing</a></li>
+            <li><a href="# ">Women Clothing</a></li>
+            <li><a href="# ">Men Accessories</a></li>
+            <li><a href="# ">Women Accessories</a></li>
         </ul>
-        <ul class="helpful-links">
+        <ul class="helpful-links ">
             <li>
                 <h3>Helpful Links</h3>
             </li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="# ">Home</a></li>
+            <li><a href="# ">About</a></li>
+            <li><a href="# ">Contact</a></li>
         </ul>
-        <ul class="patners">
+        <ul class="patners ">
             <li>
                 <h3>Patners</h3>
             </li>
-            <li><a href="#">Zara</a></li>
-            <li><a href="#">Pantaloons</a></li>
-            <li><a href="#">Levis</a></li>
-            <li><a href="#">Ucb</a></li>
-            <li><a href="#">+ Many More</a></li>
+            <li><a href="# ">Zara</a></li>
+            <li><a href="# ">Pantaloons</a></li>
+            <li><a href="# ">Levis</a></li>
+            <li><a href="# ">Ucb</a></li>
+            <li><a href="# ">+ Many More</a></li>
         </ul>
-        <ul class="address">
+        <ul class="address ">
             <li>
                 <h3>Address</h3>
             </li>
@@ -109,8 +98,8 @@
     <!-- FOOTER SECTION END  -->
 
     <!-- JavaScript, jQuery & Slick Links -->
-    <script src="./js/index.js"></script>
-    <script src="./js/checkout.js"></script>
+    <script type="text/javascript " src="./slick/slick/slick.min.js "></script>
+    <script src="./js/index.js "></script>
 </body>
 
 </html>
